test/expected/const_cast_pi-c.out
const cast x into pointer to int
^
1: error: const_cast is not supported in C
